* Add Object.isEmpty() utility method to help detect when an object contains no properties of its own. [Prototype LH #245] [jddalton, Ken Snyder]

* Cleanup String#escapeHTML and String#unescapeHTML as well as standardize capability check property values to reduce extraneous text. [jddalton]

* Fix IE bug where String#replace sets regexp's lastIndex property. [jddalton]

* Optimize Hash using the `expando` property to avoid costly Object.hasKey() lookups. [jddalton, kangax]

* Add unique private `expando` property. [jddalton]

* Fix regression bug in the Object._each() Safari 2 fork. [jddalton]

* Ensure Object.isHash() returns false for Hash.prototype. [jddalton]

* unit test: Update unit test framework. [jddalton, Tobie Langel]

* deprecation extension: Mark Array#reduce() as removed (commented out because native Array#reduce is used in Array#inject). [jddalton, Tobie Langel]

* deprecation extension: Modify so it will run in Fuse. [jddalton]

* deprecation extension: Cleanup Hash update helpers. [Tobie Langel]

* deprecation extension: Cleanup `assertInfoNotified`, `assertErrorNotified`, `assertWarnNotified`, and `assertNotNotified` tests, as well as add `assertEmpty` test. [Tobie Langel]

* Add support for script elements in Element#update, Element#insert, and Element#replace. [Prototype LH #573] [jddalton, kangax, Martin, Tobie Langel]

* Work around IE8 bug causing APPLET and OBJECT elements not to inherit from their prototypes. [jddalton]

* Fix Safari 2 bugs in getWindow() and Event.extend() as well as comment Element.extend(). [jddalton]

* Fix coding pattern so function expressions will work in Safari 2. [jddalton]

* Remove undeclared assignments for ECMA 3.1 strict mode compliance. [jddalton, kangax]

* Change coding pattern to utilize named function expressions and reduce FuseJS's memory footprint. [jddalton, kangax]
